--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,7 @@ body{
   color: #5fc0c4;
 }
 h1{
-  margin: 50px 0;
+  margin: 3% 0;
   text-align: center;
 }
 table{
@@ -35,7 +35,7 @@ table{
   tbody{
     display: block;
     width: 100%;
-    min-height: 80vh;
+    min-height: 40vh;
     tr {
       display: grid;
       grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -54,6 +54,61 @@ table{
           color: white;
           background: #5fc0c4;
           transition: all 0.3s linear;
+        }
+      }
+    }
+  }
+}
+figure{
+  display: block;
+  width: 80%;
+  min-height: 20vh;
+  margin: auto;
+  border:1px solid #5fc0c4;
+  figcaption{
+    display: block;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 30px;
+  }
+  form{
+    display: flex;
+    flex-wrap: wrap;
+    label{
+      flex-basis: 25%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      height: 50px;
+      font-size: 20px;
+      &:last-child{
+        padding-top: 40px;
+        flex-direction: row;
+        flex-basis: 100%;
+        justify-content: center;
+        input{
+          display: block;
+          flex-basis: 70%;
+          height: 40px;
+          margin-left: 10%;
+          border: 1px solid #5fc0c4;
+          outline: 1px solid #5fc0c4;
+          padding-left: 10px;
+          &::placeholder {
+            padding-left: 10px;
+            color: #5fc0c4;
+           }
+        }
+        button{
+          flex-basis: 10%;
+          margin-right: 10%;
+          margin-left: 2%;
+          height: 40px;
+          cursor: pointer;
+          background-color: #5fc0c4;
+          color: white;
+          border: none;
         }
       }
     }
