--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,38 +1,40 @@
-*, *:before, *after{
+*,
+*:before,
+*after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
+body {
   color: #5fc0c4;
 }
-h1{
+h1 {
   margin: 3% 0;
   text-align: center;
 }
-table{
+table {
   display: block;
   width: 80%;
   margin: auto;
-  thead{
+  thead {
     display: block;
     width: 100%;
-    tr{
+    tr {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      th{
+      th {
         display: block;
         width: 100%;
         margin: auto;
         padding: 10px;
-        background-color:#5fc0c4;
-        color:white;
+        background-color: #5fc0c4;
+        color: white;
         border: 1px solid white;
       }
     }
   }
-  tbody{
+  tbody {
     display: block;
     width: 100%;
     min-height: 40vh;
@@ -41,7 +43,7 @@ table{
       grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
       gap: 0 1px;
       margin: 2px;
-      td{
+      td {
         display: block;
         width: 100%;
         text-align: center;
@@ -49,7 +51,11 @@ table{
         border: 1px solid #5fc0c4;
         cursor: pointer;
         transition: all 0.3s linear;
-        &:hover{
+        &.full {
+          background-color: #33969a;
+          color: white;
+        }
+        &:hover {
           border: 1px solid white;
           color: white;
           background: #5fc0c4;
@@ -59,22 +65,23 @@ table{
     }
   }
 }
-figure{
+figure {
   display: block;
   width: 80%;
   min-height: 20vh;
   margin: auto;
-  border:1px solid #5fc0c4;
-  figcaption{
+  border: 1px solid #5fc0c4;
+  figcaption {
     display: block;
     text-align: center;
     padding: 10px 0;
     font-size: 30px;
   }
-  form{
+  form {
     display: flex;
     flex-wrap: wrap;
-    label{
+    min-height: 130px;
+    label {
       flex-basis: 25%;
       display: flex;
       flex-direction: column;
@@ -82,12 +89,12 @@ figure{
       justify-content: space-between;
       height: 50px;
       font-size: 20px;
-      &:last-child{
+      &:last-child {
         padding-top: 40px;
         flex-direction: row;
         flex-basis: 100%;
         justify-content: center;
-        input{
+        input {
           display: block;
           flex-basis: 70%;
           height: 40px;
@@ -98,9 +105,15 @@ figure{
           &::placeholder {
             padding-left: 10px;
             color: #5fc0c4;
-           }
+          }
         }
-        button{
+        select {
+          display: none;
+        }
+        input[type="date"] {
+          display: none;
+        }
+        button {
           flex-basis: 10%;
           margin-right: 10%;
           margin-left: 2%;
@@ -113,4 +126,129 @@ figure{
       }
     }
   }
+  .pre {
+    display: block;
+    padding-top: 20px;
+  }
+}
+
+.modal-empty {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  .modal__container {
+    width: 300px;
+    height: 300px;
+    background-color: #5fc0c4;
+    color: white;
+    h2 {
+      text-align: center;
+      padding: 10px;
+      font-size: 30px;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      height: 80%;
+      select {
+        height: 25px;
+        width: 60%;
+        border: none;
+        outline: none;
+      }
+      input {
+        border: none;
+        outline: 1px solid #5fc0c4;
+        height: 30px;
+        padding: 5px;
+      }
+      button {
+        display: block;
+        width: 50%;
+        height: 30px;
+        border: none;
+        color: #33969a;
+        cursor: pointer;
+        transition: all 0.3s linear;
+        &:hover {
+          border: 1px solid black;
+          background-color: #5fc0c4;
+          color: white;
+          transition: all 0.3s linear;
+        }
+      }
+    }
+  }
+}
+
+.modal-fill {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  &__container {
+    width: 500px;
+    height: 500px;
+    background-color: #5fc0c4;
+    color: white;
+  }
+  h2 {
+    text-align: center;
+    padding: 10px;
+    font-size: 30px;
+  }
+  .mf__description {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 80%;
+    font-size: 15px;
+    .mf__text {
+      font-size: 20px;
+    }
+    div {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 100%;
+      height: 30px;
+      text-align: center;
+      button {
+        height: 30px;
+        width: 100px;
+        color: #33969a;
+        cursor: pointer;
+        border: none;
+        outline: none;
+        transition: all 0.3s linear;
+      }
+    }
+  }
+}
+.mf__description {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 80%;
+  .mf__time {
+    font-size: 25px;
+  }
+}
+.active {
+  display: flex;
 }
